[package]
name = "js-regexp-macros"
version = "0.2.0"
edition = "2021"
description = "proc-macro crate for js-regexp"
repository = "https://github.com/cyradotpink/js-regexp-rust"
license = "MIT"
keywords = []
categories = []

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.26"
quote = "1.0.31"
