[package]
name = "js-regexp-macros"
version = "0.2.1"
edition = "2021"
description = "proc-macro crate for js-regexp"
repository = "https://github.com/cyradotpink/js-regexp-rust"
license = "MIT"
keywords = []
categories = []

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.27", features = ["full"] }
quote = "1.0.31"
